chore!: Upgrade to Java 11
BREAKING CHANGE: Will require installing Java version 11 or higher before running.